@@ -23,8 +23,8 @@ differing image format.  Image processing operations are available from the
 command line, as well as through C, C++, Perl, or Java programming
 interfaces.</div>
 </dd>
-<dd>
 <p>
+<dd>
 <a href="www/archives.html"><img src="images/magick.png" alt="Image Magick"
   border="0" height="236" width="229" align="Right"></a>
 <div align="Left">Here are just a few <a href="images/examples.jpg">examples</a>
