@@ -23,6 +23,10 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-02-14  Cristy  &lt;cristy@mystic.es.dupont.com&gt;,
+  * Command line options now stay in effect for any image in command
+    line order until a another option is encountered or if -new is specified.
+
 2002-02-07  Cristy  &lt;cristy@mystic.es.dupont.com&gt;,
   * SVG coders understands inline images.
 
