@@ -27,6 +27,7 @@
 		<LI><A HREF="#readimage">ReadImage</A>
 		<LI><A HREF="#readinlineimage">ReadInlineImage</A>
 		<LI><A HREF="#writeimage">WriteImage</A>
+		<LI><A HREF="#writeimages">WriteImages</A>
 	</UL>
 
 </UL>
@@ -48,6 +49,7 @@
 <P>Image * <STRONG>ReadImage</STRONG>( const ImageInfo *image_info, ExceptionInfo *exception );</P>
 <P>Image * <STRONG>ReadInlineImage</STRONG>( const ImageInfo *image_info, const char *content, ExceptionInfo *exception );</P>
 <P>unsigned int  <STRONG>WriteImage</STRONG>( const ImageInfo *image_info, Image *image );</P>
+<P>unsigned int  <STRONG>WriteImages</STRONG>( const ImageInfo *image_info, Image *image, const char *filename, ExceptionInfo *exception );</P>
 <P>
 <HR>
 <H1><A NAME="function descriptions">
@@ -196,6 +198,28 @@ Write the image defined by the file or filename members of this structure.
 <DD>
 
 <FONT SIZE=-1>A</FONT> pointer to a Image structure.
+<P></P></DL></DL>
+<P>
+<H2><A NAME="writeimages">WriteImages</A></H2>
+<blockquote>WriteImages() writes an image sequence. </blockquote><P>The format of the WriteImages method is:</P>
+<blockquote>unsigned int WriteImages ( const <A HREF="types/ImageInfo.html">ImageInfo</A> *image_info, <A HREF="types/Image.html">Image</A> *image, const char *filename, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
+<FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
+<DL><DT><DD><DL>
+<dd><p></p><dt><STRONG>image_info:</STRONG><BR>
+<DD>
+The image info.
+<P></P>
+<dd><p></p><dt><STRONG><A NAME="item_o_images%3A">images:</A></STRONG><BR>
+<DD>
+The image list.
+<P></P>
+<dd><p></p><dt><STRONG><A NAME="item_o_filename%3A">filename:</A></STRONG><BR>
+<DD>
+The image filename.
+<P></P>
+<dd><p></p><dt><STRONG>exception:</STRONG><BR>
+<DD>
+Return any errors or warnings in this structure.
 </DL></DL>
 
 </BODY>
