@@ -24,6 +24,7 @@
 		<LI><A HREF="#deleteimagelist">DeleteImageList</A>
 		<LI><A HREF="#destroyimagelist">DestroyImageList</A>
 		<LI><A HREF="#getimagelist">GetImageList</A>
+		<LI><A HREF="#getimagelistindex">GetImageListIndex</A>
 		<LI><A HREF="#getimagelistsize">GetImageListSize</A>
 		<LI><A HREF="#getnextimage">GetNextImage</A>
 		<LI><A HREF="#imagelisttoarray">ImageListToArray</A>
@@ -53,6 +54,7 @@
 <P>unsigned int  <STRONG>DeleteImageList</STRONG>( Image *images, const unsigned long offset );</P>
 <P>void  <STRONG>DestroyImageList</STRONG>( Image *image );</P>
 <P>Image * <STRONG>GetImageList</STRONG>( const Image *images, const unsigned long offset, ExceptionInfo *exception );</P>
+<P>size_t  <STRONG>GetImageListIndex</STRONG>( const Image *images );</P>
 <P>size_t  <STRONG>GetImageListSize</STRONG>( const Image *images );</P>
 <P>Image * <STRONG>GetNextImage</STRONG>( Image *images );</P>
 <P>Image **  <STRONG>ImageListToArray</STRONG>( const Image *images, ExceptionInfo *exception );</P>
@@ -124,6 +126,16 @@ The position within the list.
 <dd><p></p><dt><STRONG>exception:</STRONG><BR>
 <DD>
 Return any errors or warnings in this structure.
+<P></P></DL></DL>
+<P>
+<H2><A NAME="getimagelistindex">GetImageListIndex</A></H2>
+<blockquote>GetImageListIndex() returns the position in the list of the specified image. </blockquote><P>The format of the GetImageListIndex method is:</P>
+<blockquote>size_t GetImageListIndex ( const <A HREF="types/Image.html">Image</A> *images ); </blockquote><P>
+<FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
+<DL><DT><DD><DL>
+<dd><p></p><dt><STRONG>images:</STRONG><BR>
+<DD>
+The image list.
 <P></P></DL></DL>
 <P>
 <H2><A NAME="getimagelistsize">GetImageListSize</A></H2>
